[gd_scene load_steps=58 format=2]

[ext_resource path="res://Scenes/Minigames/Tshirt/Tshirt.gd" type="Script" id=1]
[ext_resource path="res://Art/Minigame art/Tshirt/37613339-illustration-of-blank-white-front-tee-shirt.png" type="Texture" id=2]
[ext_resource path="res://Art/Minigame art/Tshirt/paint_white.png" type="Texture" id=3]
[ext_resource path="res://Art/Minigame art/Tshirt/garbagecan.png" type="Texture" id=4]
[ext_resource path="res://Art/Pixeltype.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/Minigame art/Tshirt/donation_bin.png" type="Texture" id=6]
[ext_resource path="res://Art/Minigame art/Tshirt/keepshirt.png" type="Texture" id=7]
[ext_resource path="res://Scenes/ScoreMessage.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/SpeechBubble.tscn" type="PackedScene" id=9]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_15.png" type="Texture" id=10]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_6.png" type="Texture" id=11]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_6.png" type="Texture" id=12]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_3.png" type="Texture" id=13]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_3.png" type="Texture" id=14]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_5.png" type="Texture" id=15]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_13.png" type="Texture" id=16]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_7.png" type="Texture" id=17]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_9.png" type="Texture" id=18]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_10.png" type="Texture" id=19]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_2.png" type="Texture" id=20]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_2.png" type="Texture" id=21]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_1.png" type="Texture" id=22]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_14.png" type="Texture" id=23]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_1.png" type="Texture" id=24]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_10.png" type="Texture" id=25]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_9.png" type="Texture" id=26]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_11.png" type="Texture" id=27]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_5.png" type="Texture" id=28]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_4.png" type="Texture" id=29]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_8.png" type="Texture" id=30]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_4.png" type="Texture" id=31]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_7.png" type="Texture" id=32]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_8.png" type="Texture" id=33]
[ext_resource path="res://Art/Minigame art/Tshirt/paint_green.png" type="Texture" id=34]
[ext_resource path="res://Art/Minigame art/Tshirt/paint_red.png" type="Texture" id=35]
[ext_resource path="res://Art/Minigame art/Tshirt/paint_black.png" type="Texture" id=36]
[ext_resource path="res://Art/Minigame art/Tshirt/paint_yellow.png" type="Texture" id=37]
[ext_resource path="res://Art/Minigame art/Tshirt/paint_blue.png" type="Texture" id=38]
[ext_resource path="res://Scenes/Minigames/Tshirt/Paintbuckets.gd" type="Script" id=39]
[ext_resource path="res://Art/Minigame art/Tshirt/black-dot.png" type="Texture" id=40]
[ext_resource path="res://Art/Minigame art/Tshirt/paintbrush.png" type="Texture" id=41]
[ext_resource path="res://Art/Minigame art/Tshirt/background_wardrobe_game_.png" type="Texture" id=42]
[ext_resource path="res://Art/Minigame art/Tshirt/grey-dot.png" type="Texture" id=43]
[ext_resource path="res://Art/Minigame art/Tshirt/wardrobe.png" type="Texture" id=44]

[sub_resource type="DynamicFont" id=2]
size = 160
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 130
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Shirt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "donate"
tracks/0/type = "value"
tracks/0/path = NodePath("Shirt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -200, 0 ), Vector2( 1400, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "keep"
tracks/0/type = "value"
tracks/0/path = NodePath("Shirt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 1000 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "throwout"
tracks/0/type = "value"
tracks/0/path = NodePath("Shirt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 200, 0 ), Vector2( -1400, 0 ) ]
}

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 31 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 33 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 21 ), ExtResource( 14 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 12 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "hiss",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 50 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 186.5, 257 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 190.5, 257 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 187, 257 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 185.5, 256 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 186, 256 )

[node name="Tshirt" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -1534, -248 )
scale = Vector2( 0.935547, 0.526367 )
texture = ExtResource( 42 )
offset = Vector2( 2665.82, 1497.05 )

[node name="Wardrobe" type="Sprite" parent="."]
position = Vector2( 1321, 498 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 44 )

[node name="SpeechBubble" parent="." instance=ExtResource( 9 )]
position = Vector2( -3, 4 )
scale = Vector2( 0.75, 0.75 )

[node name="Shirt" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Shirt"]
position = Vector2( 1059.6, 622.9 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shirt"]
position = Vector2( 68.6, 80.9 )
polygon = PoolVector2Array( 583, 525, 612, 550, 658, 577, 701, 584, 730, 581, 752, 509, 749, 820, 734, 921, 762, 947, 841, 979, 910, 988, 1005, 987, 1091, 977, 1184, 955, 1232, 934, 1242, 928, 1220, 794, 1216, 716, 1218, 460, 1246, 562, 1280, 562, 1316, 557, 1349, 545, 1395, 520, 1347, 381, 1329, 303, 1297, 228, 1266, 192, 1076, 99, 1030, 112, 988, 116, 937, 112, 891, 99, 885, 95, 785, 153, 690, 199, 654, 242, 631, 305, 622, 395 )

[node name="throw_away_button" type="TextureButton" parent="."]
margin_left = 92.0
margin_top = 859.0
margin_right = 566.0
margin_bottom = 1447.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="throw_away_button"]
margin_left = -13.3333
margin_top = 593.333
margin_right = 486.667
margin_bottom = 693.333
custom_fonts/font = SubResource( 2 )
text = "Weggooien"

[node name="donation_button" type="TextureButton" parent="."]
margin_left = 1641.0
margin_top = 846.0
margin_right = 2441.0
margin_bottom = 1646.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="donation_button"]
margin_left = 196.0
margin_top = 784.0
margin_right = 628.0
margin_bottom = 884.0
custom_fonts/font = SubResource( 2 )
text = "Weggeven"

[node name="keep_button" type="TextureButton" parent="."]
margin_left = 356.0
margin_top = 737.0
margin_right = 968.0
margin_bottom = 1349.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="keep_button"]
margin_left = 104.0
margin_top = 594.0
margin_right = 408.0
margin_bottom = 676.0
custom_fonts/font = SubResource( 3 )
text = "Houden"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/donate = SubResource( 5 )
anims/keep = SubResource( 7 )
anims/throwout = SubResource( 6 )

[node name="Cat" type="AnimatedSprite" parent="."]
position = Vector2( 295, 312 )
scale = Vector2( 0.283887, 0.298535 )
frames = SubResource( 8 )
frame = 2
speed_scale = 0.5
playing = true

[node name="Paintbuckets" type="Node2D" parent="."]
script = ExtResource( 39 )

[node name="Yellow" type="Area2D" parent="Paintbuckets"]
position = Vector2( 1692, 331 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Paintbuckets/Yellow"]
position = Vector2( -8, 3 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 37 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paintbuckets/Yellow"]
position = Vector2( -7, 3 )
shape = SubResource( 1 )

[node name="Green" type="Area2D" parent="Paintbuckets"]
position = Vector2( 1772, 331 )
scale = Vector2( 0.2, 0.2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Paintbuckets/Green"]
texture = ExtResource( 34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paintbuckets/Green"]
position = Vector2( 0.5, 0 )
shape = SubResource( 9 )

[node name="White" type="Area2D" parent="Paintbuckets"]
position = Vector2( 1685, 556 )
scale = Vector2( 0.2, 0.2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Paintbuckets/White"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paintbuckets/White"]
position = Vector2( -4.5, -1 )
shape = SubResource( 10 )

[node name="Red" type="Area2D" parent="Paintbuckets"]
position = Vector2( 1772, 556 )
scale = Vector2( 0.2, 0.2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Paintbuckets/Red"]
texture = ExtResource( 35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paintbuckets/Red"]
position = Vector2( -1, 0 )
shape = SubResource( 11 )

[node name="Blue" type="Area2D" parent="Paintbuckets"]
position = Vector2( 1772, 446 )
scale = Vector2( 0.2, 0.2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Paintbuckets/Blue"]
texture = ExtResource( 38 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paintbuckets/Blue"]
position = Vector2( 0.5, 1 )
shape = SubResource( 12 )

[node name="Black" type="Area2D" parent="Paintbuckets"]
position = Vector2( 1685, 446 )
scale = Vector2( 0.2, 0.2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Paintbuckets/Black"]
texture = ExtResource( 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paintbuckets/Black"]
position = Vector2( -1, 1 )
shape = SubResource( 13 )

[node name="Paintbrushes" type="Node2D" parent="."]
position = Vector2( 1726, 716 )

[node name="Brush" type="Sprite" parent="Paintbrushes"]
position = Vector2( 3.00024, -4.99988 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 41 )

[node name="Large" type="TextureButton" parent="Paintbrushes"]
margin_left = 10.0
margin_top = 70.0
margin_right = 850.0
margin_bottom = 642.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 43 )

[node name="Medium" type="TextureButton" parent="Paintbrushes"]
margin_left = -50.0
margin_top = 75.0
margin_right = 790.0
margin_bottom = 647.0
rect_scale = Vector2( 0.075, 0.075 )
texture_normal = ExtResource( 40 )

[node name="Small" type="TextureButton" parent="Paintbrushes"]
margin_left = -100.0
margin_top = 80.0
margin_right = 740.0
margin_bottom = 652.0
rect_scale = Vector2( 0.05, 0.05 )
texture_normal = ExtResource( 43 )

[node name="End_game" type="Timer" parent="."]
one_shot = true

[node name="ScoreMessage" parent="." instance=ExtResource( 8 )]

[connection signal="mouse_entered" from="Shirt" to="." method="_on_Shirt_mouse_entered"]
[connection signal="mouse_exited" from="Shirt" to="." method="_on_Shirt_mouse_exited"]
[connection signal="pressed" from="throw_away_button" to="." method="_on_throw_away_button_pressed"]
[connection signal="pressed" from="donation_button" to="." method="_on_donation_button_pressed"]
[connection signal="pressed" from="keep_button" to="." method="_on_keep_button_pressed"]
[connection signal="input_event" from="Paintbuckets/Yellow" to="." method="_on_Yellow_input_event"]
[connection signal="input_event" from="Paintbuckets/Green" to="." method="_on_Green_input_event"]
[connection signal="input_event" from="Paintbuckets/White" to="." method="_on_White_input_event"]
[connection signal="input_event" from="Paintbuckets/Red" to="." method="_on_Red_input_event"]
[connection signal="input_event" from="Paintbuckets/Blue" to="." method="_on_Blue_input_event"]
[connection signal="input_event" from="Paintbuckets/Black" to="." method="_on_Black_input_event"]
[connection signal="pressed" from="Paintbrushes/Large" to="." method="_on_Large_pressed"]
[connection signal="pressed" from="Paintbrushes/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="Paintbrushes/Small" to="." method="_on_Small_pressed"]
[connection signal="timeout" from="End_game" to="." method="_on_End_game_timeout"]
